[build-system]
requires = ["scikit-build-core>=0.11"]
build-backend = "scikit_build_core.build"

[project]
name = "tracy_client"
version = "0.13.1"
description = "A real time, nanosecond resolution, remote telemetry, hybrid frame and sampling profiler for games and other applications."
authors = [
  { name = "Bartosz Taudul", email = "wolf@nereid.pl" },
]
requires-python = ">=3.10"

[project.urls]
homepage = "https://github.com/wolfpld/tracy"
source = "https://github.com/wolfpld/tracy"

[tool.scikit-build]
cmake.version = ">=3.15.0"
ninja.version = ">=1.11"
cmake.source-dir = ".."
cmake.build-type = "Release"
wheel.install-dir = "tracy_client"
wheel.packages = ["tracy_client"]

[tool.scikit-build.cmake.define]
TRACY_CLIENT_PYTHON = "ON"
TRACY_STATIC = "OFF"
CMAKE_INSTALL_BINDIR = ""
