server_sources = files(
        'TracyBadVersion.cpp',
        'TracyColor.cpp', 
        # 'TracyEventDebug.cpp', 
        'TracyFilesystem.cpp', 
        'TracyImGui.cpp',
        'TracyMemory.cpp',
        'TracyMicroArchitecture.cpp',
        'TracyMmap.cpp',
        'TracyMouse.cpp',
        'TracyPrint.cpp',
        'TracyProtoHistory.cpp',
        'TracySourceContents.cpp',
        'TracySourceTokenizer.cpp',
        'TracySourceView.cpp',
        'TracyStorage.cpp',
        'TracyTaskDispatch.cpp',
        'TracyTexture.cpp',
        'TracyTextureCompression.cpp',
        'TracyThreadCompress.cpp',
        'TracyUserData.cpp',
        'TracyView_Annotations.cpp',
        'TracyView_Callstack.cpp',
        'TracyView_Compare.cpp',
        'TracyView_ConnectionState.cpp',
        'TracyView_ContextSwitch.cpp',
        'TracyView_CpuData.cpp',
        'TracyView_FindZone.cpp',
        'TracyView_FrameOverview.cpp',
        'TracyView_FrameTimeline.cpp',
        'TracyView_FrameTree.cpp',
        'TracyView_Locks.cpp',
        'TracyView_Memory.cpp',
        'TracyView_Messages.cpp',
        'TracyView_Navigation.cpp',
        'TracyView_NotificationArea.cpp',
        'TracyView_Options.cpp',
        'TracyView_Playback.cpp',
        'TracyView_Plots.cpp',
        'TracyView_Ranges.cpp',
        'TracyView_Samples.cpp',
        'TracyView_Statistics.cpp',
        'TracyView_Timeline.cpp',
        'TracyView_TraceInfo.cpp',
        'TracyView_Utility.cpp',
        'TracyView_ZoneInfo.cpp',
        'TracyView_ZoneTimeline.cpp',
        'TracyView.cpp',
        'TracyWeb.cpp',
        'TracyWorker.cpp')

capstone = dependency('capstone')

deps = [imgui_dep, capstone, tracy_dep]
server_lib = static_library('tracy_server', server_sources, dependencies: deps)
server_dep = declare_dependency(dependencies: deps, link_with: server_lib)