zstd_sources = files(
    'common/debug.c',
    'common/entropy_common.c',
    'common/error_private.c',
    'common/fse_decompress.c',
    'common/pool.c',
    'common/threading.c',
    'common/xxhash.c',
    'common/zstd_common.c',
    'compress/fse_compress.c',
    'compress/hist.c',
    'compress/huf_compress.c',
    'compress/zstd_compress_literals.c',
    'compress/zstd_compress_sequences.c',
    'compress/zstd_compress_superblock.c',
    'compress/zstd_compress.c',
    'compress/zstd_double_fast.c',
    'compress/zstd_fast.c',
    'compress/zstd_lazy.c',
    'compress/zstd_ldm.c',
    'compress/zstd_opt.c',
    'compress/zstdmt_compress.c',
    'decompress/huf_decompress_amd64.S',
    'decompress/huf_decompress.c',
    'decompress/zstd_ddict.c',
    'decompress/zstd_decompress_block.c',
    'decompress/zstd_decompress.c',
    'dictBuilder/cover.c',
    'dictBuilder/divsufsort.c',
    'dictBuilder/fastcover.c',
    'dictBuilder/zdict.c')

zstd_inc = include_directories('.')
zstd_lib = static_library('zstd', zstd_sources, include_directories: zstd_inc)
zstd_dep = declare_dependency(include_directories: zstd_inc, link_with: zstd_lib)